# server-example-python-flask-1

./: .gitignore  .replit  finalize_details_log.txt  letta_personal_agent.ipynb  letta_personal_agent_1.ipynb  letta_personal_agent_2.ipynb  pyproject.toml  replit.nix  test.ipynb  user_info_log.txt
app/: main.py
app/api/: custom_llm.py  user_info_webhook.py  webhook.py  webhook_v0.py  webhook_v1.py  webhook_v2.py
app/functions/: get_character_inspiration.py  get_character_inspiration_tool.py  get_custom_llm_streaming.py  ollama_embedding.py  schedule_clickup.py
app/rag/: app.py  db.py  models.py  pinecone_rag.py  requirements.txt  user_models.py
app/response_data/: openapi_vapi_schema_api.json  response_data_1734993864.862331.json  response_data_1734993874.071001.json  response_data_1734993880.1305652.json  response_data_1734993890.000973.json  response_data_1734993890.803307.json  response_data_1734993891.8032699.json  response_data_1734993905.222157.json  response_data_1734993905.985365.json  response_data_1734993917.862755.json  response_data_1734993922.045666.json  response_data_1734993922.693407.json  response_data_1734993930.016104.json  response_data_1734993942.077203.json  response_data_1734993944.913533.json  response_data_1734993948.5252328.json  response_data_1734993949.302639.json  response_data_1734993949.5106492.json  response_data_1734993964.712451.json  response_data_1734993968.59693.json  response_data_1734993968.877131.json  response_data_1734993985.139436.json  response_data_1734993988.037477.json  response_data_1734994117.3010612.json  response_data_1734994125.958878.json  response_data_1734994141.87318.json  response_data_1734994143.789048.json  response_data_1734994144.0354729.json  response_data_1734994154.091152.json  response_data_1734994154.826293.json  (+236 more)
attached_assets/: Pasted-Traceback-most-recent-call-last-File-home-runner-workspace-pythonlibs-bin-flask-line-8-in-1738365430752.txt
data/: atomic_habits.txt  vapi_openapi_spec.json
(+14 files in other folders)
